fix: change z-indexes to fix visual header issue

--- a/renderer/index.css
+++ b/renderer/index.css
@@ -9,10 +9,11 @@
   border-bottom: 2px solid currentColor;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 #entries thead th:first-child {
-  z-index: 1;
+  z-index: 2;
 }
 
 #entries tr th:first-child {
